--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-infra/.terraform/providers/registry.terraform.io/hashicorp/aws/5.31.0/windows_amd64/terraform-provider-aws_v5.31.0_x5.exe
 # Local .terraform directories
 **/.terraform/*
 
@@ -33,3 +32,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Exclude local variables
+variables.tf
